kube-deploy.yaml
# Source: service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tone-analyzer-nodejs
  labels:
    app: tone-analyzer-nodejs
    chart: tone-analyzer-nodejs-0.1.0
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app: tone-analyzer-nodejs
---
# Source: deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: tone-analyzer-nodejs
  labels:
    app: tone-analyzer-nodejs
    chart: tone-analyzer-nodejs-0.1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tone-analyzer-nodejs
  template:
    metadata:
      labels:
        app: tone-analyzer-nodejs
    spec:
      containers:
        - name: tone-analyzer-nodejs
          image: "ibmwatson/tone-analyzer-nodejs:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: "/"
              port: 5000
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: "/"
              port: 5000
              scheme: HTTP
---
# Source: ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tone-analyzer-nodejs
  labels:
    app: tone-analyzer-nodejs
    chart: tone-analyzer-nodejs-0.1.0
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: tone-analyzer-nodejs
          servicePort: 5000
